remove one slash

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ os:
 
 before_intall:
   /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat;
+  which cmake;
   wget -q https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/bin/hdf5-1.12.0-Std-win10_64-vs15.zip -O /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
       unzip -q /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
       ls ./hdf;
@@ -18,7 +19,7 @@ before_intall:
       echo `pwd`;
       readlink -f HDF5-1.12.0-win64.msi;
       ls -lastr `pwd`/HDF5-1.12.0-win64.msi;
-      msiexec //i `pwd`/HDF5-1.12.0-win64.msi //quiet TARGETDIR=`pwd`/../hdf5-1.12.0/dist //qb;
+      msiexec /i `pwd`/HDF5-1.12.0-win64.msi /quiet TARGETDIR=`pwd`/../hdf5-1.12.0/dist /qb;
       cd ..;
       which h5dump;
       ls `pwd`/hdf5-1.12.0/dist;
