--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 os:
   - windows
 
-before_intall:
+before_install:
   /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat;
   which cmake;
   wget -q https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/bin/hdf5-1.12.0-Std-win10_64-vs15.zip -O /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
@@ -19,7 +19,7 @@ before_intall:
       echo `pwd`;
       readlink -f HDF5-1.12.0-win64.msi;
       ls -lastr `pwd`/HDF5-1.12.0-win64.msi;
-      msiexec /i `pwd`/HDF5-1.12.0-win64.msi /quiet TARGETDIR=`pwd`/../hdf5-1.12.0/dist /qb;
+      msiexec /i `pwd`/HDF5-1.12.0-win64.msi /qn TARGETDIR=`pwd`/../hdf5-1.12.0/dist;
       cd ..;
       which h5dump;
       ls `pwd`/hdf5-1.12.0/dist;
