--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,18 @@ os:
   - windows
 
 before_install:
-  /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat;
-  which cmake;
-  wget -q https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/bin/hdf5-1.12.0-Std-win10_64-vs15.zip -O /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
-      unzip -q /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
-      ls ./hdf;
-      mkdir -p `pwd`/hdf5-1.12.0/dist;
-      cd hdf;
-      echo `pwd`;
-      readlink -f HDF5-1.12.0-win64.msi;
-      ls -lastr `pwd`/HDF5-1.12.0-win64.msi;
-      msiexec /i `pwd`/HDF5-1.12.0-win64.msi /qn /lv!;
-      cd ..;
-      which h5dump;
-      ls `pwd`/hdf5-1.12.0/dist;
-      export HDF5_HOME_WIN=`pwd`/hdf5-1.12.0/dist;
+  - /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Common7/Tools/VsDevCmd.bat;
+  - which cmake;
+  - wget -q https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/bin/hdf5-1.12.0-Std-win10_64-vs15.zip -O /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
+  - unzip -q /tmp/hdf5-1.12.0-Std-win10_64-vs15.zip;
+  - ls ./hdf;
+  - mkdir -p `pwd`/hdf5-1.12.0/dist;
+  - cd hdf;
+  - echo `pwd`;
+  - readlink -f HDF5-1.12.0-win64.msi;
+  - ls -lastr `pwd`/HDF5-1.12.0-win64.msi;
+  - travis_wait msiexec /i `pwd`/HDF5-1.12.0-win64.msi /qn /lv!;
+  - cd ..;
+  - which h5dump;
+  - ls `pwd`/hdf5-1.12.0/dist;
+  - export HDF5_HOME_WIN=`pwd`/hdf5-1.12.0/dist;
