--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ before_install:
   - readlink -f HDF5-1.12.0-win64.msi;
   - ls -lastr `pwd`/HDF5-1.12.0-win64.msi;
   - travis_wait msiexec /i `pwd`/HDF5-1.12.0-win64.msi /qn /lv!;
+  - powershell "Start-Process -FilePath msiexec.exe -Wait -ArgumentList '/i HDF5-1.10.5-win64.msi /qn'"
   - cd ..;
-  - which h5dump;
-  - ls `pwd`/hdf5-1.12.0/dist;
-  - export HDF5_HOME_WIN=`pwd`/hdf5-1.12.0/dist;
+  - ls "C:/Program Files/HDF_Group/HDF5";
